Updated RTL mixin, switched to fixed alignment directions
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/TabLayout/TabGroup.module.less
+++ b/TabLayout/TabGroup.module.less
@@ -37,10 +37,10 @@
 		}
 
 		.client {
-			.sand-ltr-rtl-rules({
-				text-align: start;
-			}, {
-				text-align: end;
+			text-align: left;
+
+			.enact-rtl-rules({
+				text-align: right;
 			});
 		}
 	}
